set max width for vocab sidebar images to avoid extra wide images moving out of bounding box

--- a/app/assets/stylesheets/_vocab-sidebar.scss
+++ b/app/assets/stylesheets/_vocab-sidebar.scss
@@ -54,8 +54,9 @@
   }
 
   &__image {
-    min-height: 5rem;
+    min-height: 3rem;
     max-height: 5.5rem;
+    max-width: 90%;
   }
 
   &__gloss {
